<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorNavy"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:layout_marginTop="90dp"
            android:tintMode="add"
            app:srcCompat="@drawable/icon_cut_new" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="cursive"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="#FFFFFF"
            android:textSize="32sp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/app_version"
            android:textColor="@color/colorAccent"
            android:textSize="12sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1.5"
        android:orientation="vertical"
        android:padding="50dp">

        <Button
            android:id="@+id/button_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:layout_weight="1"
            android:background="@drawable/button_click"
            android:soundEffectsEnabled="true"
            android:text="@string/menu_basic"
            android:textColor="@color/colorWhite"
            android:textSize="16sp" />

        <Button
            android:id="@+id/button_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:layout_weight="1"
            android:background="@drawable/button_click"
            android:soundEffectsEnabled="true"
            android:text="@string/menu_kor"
            android:textColor="@color/colorWhite"
            android:textSize="16sp" />

        <Button
            android:id="@+id/button_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:layout_weight="1"
            android:background="@drawable/button_click"
            android:soundEffectsEnabled="true"
            android:text="@string/menu_fgn"
            android:textColor="@color/colorWhite"
            android:textSize="16sp" />

        <Button
            android:id="@+id/memo_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:layout_weight="1"
            android:background="@drawable/round_button_pressed"
            android:text="@string/menu_saved_nick"
            android:textColor="@color/colorWhite"
            android:textSize="16sp" />
    </LinearLayout>
</LinearLayout>